--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,33 +4,25 @@ plugins {
 }
 
 android {
-    namespace 'com.edanurtosun.javainstagramclone'
-    compileSdk {
-        version = release(36)
-    }
+    namespace "com.edanurtosun.javainstagramclone"
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.edanurtosun.javainstagramclone"
         minSdk 24
-        targetSdk 36
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
@@ -41,9 +33,6 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.recyclerview
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
 
     implementation platform(libs.firebase.bom)
     implementation libs.firebase.analytics
