--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,4 @@ dependencies {
     implementation libs.firebase.auth
     implementation libs.firebase.firestore
     implementation libs.firebase.storage
-}
+    implementation 'com.squareup.picasso:picasso:2.8'}
